# Buffer-memoryCleaner

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: MainWindow.cpp  MainWindow.hpp  SystemInfo.cpp  SystemInfo.hpp  main.cpp
